# advent-of-code

./: .gitignore  .rubocop.yml  1.py  3.py  4.py  CMakeLists.txt  Cargo.toml  Gemfile  README.md  csharp.sln  fetch_inputs.py
2015/python/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2016/csharp/: 1.cs  10.cs  11.cs  12.cs  13.cs  14.cs  15.cs  16.cs  17.cs  18.cs  19.cs  2.cs  20.cs  21.cs  21.py  22.cs  23.cs  24.cs  3.cs  4.cs  5.cs  6.cs  7.cs  8.cs  9.cs  Direction.cs  Utility.cs  csharp.csproj
2016/inputs/: 22.txt
2017/inputs/: 4.txt
2017/ruby/: 1.rb  10.rb  11.rb  12.rb  13.rb  14.rb  15.rb  16.rb  17.rb  18.rb  19.rb  2.rb  20.rb  21.rb  22.rb  23.rb  24.rb  25.rb  3.rb  4.rb  5.rb  6.rb  7.rb  8.rb  9.rb  run.rb  solver.rb  util.rb
2017/x86asm/: 1.asm  2.asm  3.asm  4.asm  README.md  go.sh  linked_list.asm  string.asm  string_inc.asm  util.asm
2018/cpp/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  Array2D.hpp  CMakeLists.txt  DaySolver.cpp  DaySolver.hpp  include.hpp  main.cpp  template.cpp  utils.hpp
2022/rust/: Cargo.toml
2022/rust/src/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
2023/: pom.xml
2023/src/main/java/glistermelon/: BenchmarkData.java  Day0.java  Day1.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day19.java  Day2.java  Day20.java  Day21.java  Day22.java  Day23.java  Day24.java  Day25.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java  DayBenchmarker.java  DaySolver.java  Dir.java  Main.java  R2.java  R2BD.java  R2BI.java  R2L.java  Range.java  RangeSet.java  SharedLogicBenchmarker.java  Util.java
2024/java/src/main/java/com/github/glistermelon/: DaySolver.java  Main.java
2024/python/: 10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  7.py  8.py  9.py
2024/rust/src/: 1.rs  2.rs  3.rs  4.rs  5.rs  7.rs  util.rs
2025/inputs/: 12.txt
2025/python/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
java/: pom.xml
java/src/main/java/com/github/glistermelon/: Day1.java  Day2.java  Main.java
python/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  util.py
rust/: Cargo.toml
rust/src/: 1.rs  4.rs  5.rs  7.rs  util.rs
util/python/: board_util.py  deploy.py  util.py  utils.py
util/rust/: Cargo.toml
util/rust/src/: util.rs
util/rust/src/board/: d2.rs  mod.rs  nd.rs
writeups/: 2015 Day 20.md  2016 Day 25.md  2017 Day 23.md  2017 Day 3.md
writeups/2018 Day 19/: 1.txt  2.txt  3.txt  4.txt  5.txt
