[package]
name = "advent-of-code-2024-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"

[[bin]]
name = "day_1"
path = "src/1.rs"

[[bin]]
name = "day_2"
path = "src/2.rs"

[[bin]]
name = "day_3"
path = "src/3.rs"

[[bin]]
name = "day_4"
path = "src/4.rs"

[[bin]]
name = "day_5"
path = "src/5.rs"