[package]
name = "advent-of-code-2022-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../util/rust" }
ndarray = "0.16.1"
num = "0.4.3"

[[bin]]
name = "day_1"
path = "src/1.rs"

[[bin]]
name = "day_2"
path = "src/2.rs"

[[bin]]
name = "day_3"
path = "src/3.rs"

[[bin]]
name = "day_4"
path = "src/4.rs"

[[bin]]
name = "day_5"
path = "src/5.rs"

[[bin]]
name = "day_6"
path = "src/6.rs"

[[bin]]
name = "day_7"
path = "src/7.rs"

[[bin]]
name = "day_8"
path = "src/8.rs"

[[bin]]
name = "day_9"
path = "src/9.rs"

[[bin]]
name = "day_10"
path = "src/10.rs"

[[bin]]
name = "day_11"
path = "src/11.rs"