[package]
name = "advent-of-code-2022-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../util/rust" }
ndarray = "0.16.1"
num = "0.4.3"
petgraph = "0.6.5"
itertools = "0.13.0"
serde_json = "1.0.134"
range-set = "0.0.11"

[[bin]]
name = "day_1"
path = "src/1.rs"

[[bin]]
name = "day_2"
path = "src/2.rs"

[[bin]]
name = "day_3"
path = "src/3.rs"

[[bin]]
name = "day_4"
path = "src/4.rs"

[[bin]]
name = "day_5"
path = "src/5.rs"

[[bin]]
name = "day_6"
path = "src/6.rs"

[[bin]]
name = "day_7"
path = "src/7.rs"

[[bin]]
name = "day_8"
path = "src/8.rs"

[[bin]]
name = "day_9"
path = "src/9.rs"

[[bin]]
name = "day_10"
path = "src/10.rs"

[[bin]]
name = "day_11"
path = "src/11.rs"

[[bin]]
name = "day_12"
path = "src/12.rs"

[[bin]]
name = "day_13"
path = "src/13.rs"

[[bin]]
name = "day_14"
path = "src/14.rs"

[[bin]]
name = "day_15"
path = "src/15.rs"

[[bin]]
name = "day_16"
path = "src/16.rs"

[[bin]]
name = "day_17"
path = "src/17.rs"

[[bin]]
name = "day_18"
path = "src/18.rs"

[[bin]]
name = "day_19"
path = "src/19.rs"

[[bin]]
name = "day_20"
path = "src/20.rs"

[[bin]]
name = "day_21"
path = "src/21.rs"